--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -45,20 +45,20 @@ const metadata = {
   <Features2
     title="We are here to help!"
     items={[
-      {
-        title: 'General support',
-        description: `Chat with us for inquiries related to account management, website navigation, payment issues, accessing purchased templates or general questions about the website's functionality.`,
-      },
-      {
-        title: 'Contact sales',
-        description:
-          'Chat with us for questions about purchases, customization options, licensing for commercial use, inquiries about specific template, etc.',
-      },
-      {
-        title: 'Technical support',
-        description:
-          'Chat with us when facing issues like template installation, problems editing difficulties, compatibility issues with software or download errors, or other technical challenges related to using the templates.',
-      },
+      // {
+      //   title: 'General support',
+      //   description: `Chat with us for inquiries related to account management, website navigation, payment issues, accessing purchased templates or general questions about the website's functionality.`,
+      // },
+      // {
+      //   title: 'Contact sales',
+      //   description:
+      //     'Chat with us for questions about purchases, customization options, licensing for commercial use, inquiries about specific template, etc.',
+      // },
+      // {
+      //   title: 'Technical support',
+      //   description:
+      //     'Chat with us when facing issues like template installation, problems editing difficulties, compatibility issues with software or download errors, or other technical challenges related to using the templates.',
+      // },
       {
         title: 'Phone',
         description: '+1 (234) 567-890',
