--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,6 +1,6 @@
 ---
 import { SITE } from 'astrowind:config';
-const logo = '~/assets/images/logo.png';
+const logo = '~/assets/images/logo-new.png';
 import Image from '~/components/common/Image.astro';
 ---
 
