--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -318,7 +318,7 @@ const metadata = {
                 `}
   /> -->
   <BlogLatestPosts
-    title="Temukan lebih banyak konten di Blog kami."
+    title="Berita Seputar Bonser"
   />
 
   <!-- FAQs Widget ******************* -->
