--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,7 @@
 import Features2 from '~/components/widgets/Features2.astro';
 import Features3 from '~/components/widgets/Features3.astro';
 import Hero from '~/components/widgets/Hero.astro';
+import Hero3 from '~/components/widgets/Hero3.astro';
 import Stats from '~/components/widgets/Stats.astro';
 import Steps2 from '~/components/widgets/Steps2.astro';
 import Layout from '~/layouts/PageLayout.astro';
@@ -22,20 +23,39 @@ const metadata = {
     }}
   >
     <Fragment slot="title">
-      Elevate your online presence with our <br />
-      <span class="text-accent dark:text-white highlight"> Beautiful Website Templates</span>
+      Sekilas tentang website <br />
+      <span class="text-accent dark:text-white highlight">Alumni Bonser</span>
     </Fragment>
 
     <Fragment slot="subtitle">
-      Donec efficitur, ipsum quis congue luctus, mauris magna convallis mauris, eu auctor nisi lectus non augue. Donec
-      quis lorem non massa vulputate efficitur ac at turpis. Sed tincidunt ex a nunc convallis, et lobortis nisi tempus.
-      Suspendisse vitae nisi eget tortor luctus maximus sed non lectus.
+      Website ini dibuat sebagai wadah pemersatu para alumni dibawah almamater BONSER.
+      Yang berfungsi sebagai media penyebaran informasi terkait perkembangan yang terjadi disekolah, kegiatan alumni ataupun komunitasnya, atau hal lain yang dapat bermanfaat bagi seluruh komunitas alumni Bonser itu sendiri dan juga diharapkan bisa bersinergi untuk kemajuan para siswa yang masih bersekolah saat ini.
+      Dengan mengusung semangat
     </Fragment>
   </Hero>
 
+  <Hero3
+    tagline=""
+  >
+    <Fragment slot="title">
+      Sejarah <br />
+      <span class="text-accent dark:text-white highlight">Alumni Bonser</span>
+    </Fragment>
+
+    <Fragment slot="subtitle">
+      <article class="text-xl text-muted mb-6 dark:text-slate-300">
+        <p class="mb-5">SMK Negeri 5 Jakarta, sebelumnya bernama STM Pembetulan dan Pemeliharaan, didirikan pada tahun 1956 dengan SK No. 6737/B III tertanggal, 18 Februari 1956, di lokasi Kampung Jawa, Jakarta Barat hingga tahun 1957 (saat ini menjadi lokasi STMN 7 / SMKN 35). Pada Tahun 1958 kembali dipindah ke Jalan Budi Utomo No. 5, Jakarta Pusat sampai dengan tahun 1959. Pada Tahun 1960 barulah menempati gedung baru di Jalan Kebon Sereh VII Jatinegara (Jalan Pisangan Baru Timur VII Matraman), Jakarta Timur dengan nama STM Negeri 3 Jakarta, kemudian berdasarkan SK Mendikbud RI No.036/0/1997 diubah namanya menjadi SMK Negeri 5 Jakarta sampai saat ini.</p>
+
+        <p class="mb-5">Berdirinya SMK Negeri 5 Jakarta sebagai salah satu Sekolah Teknik tertua di Jakarta ketika itu bertujuan untuk mencetak tenaga pemeliharaan dan perbaikan alat-alat, namun setelah terjadinya perubahan dan perkembangan teknologi yang begitu cepat, serta dalam kerangka menghadapi persaingan global, telah terjadi pergeseran tujuan lembaga itu sendiri, yakni menjadi lembaga untuk menyiapkan tenaga kerja tingkat menengah dalam mengisi kebutuhan dunia usaha dan dunia industri, serta mempersiapkan peserta didiknya memiliki kompetensi berdaya saing global, dimasa kini maupun masa yang akan datang, sebagai upaya menghadapi tantangan globalisasi dan modernisasi teknologi.</p>
+        
+        <p class="mb-5">Dengan adanya kebijakan peningkatan mutu manajemen berbasis sekolah, sebagai wujud pengelolaan sekolah secara desentralisasi dan otonomi pendidikan seluas-luasnya pada era otonomi, maka sekolah dituntut untuk melaksanakan penataan ulang dan pengembangan lembaga yang dapat mengimplementasikan program-program peningkatan mutu tamatan dengan memberdayakan semua potensi yang dimilikinya sejalan dengan komitmen terhadap visi dan misi yang dirumuskannya sebagai cikal bakal sekolah VOKASI di Indonesia</p>
+      </article>
+    </Fragment>
+  </Hero3>
+
   <!-- Stats Widget ****************** -->
 
-  <Stats
+  <!-- <Stats
     title="Statistics about us"
     stats={[
       { title: 'Offices', amount: '4' },
@@ -43,11 +63,11 @@ const metadata = {
       { title: 'Templates', amount: '12' },
       { title: 'Awards', amount: '24' },
     ]}
-  />
+  /> -->
 
   <!-- Features3 Widget ************** -->
 
-  <Features3
+  <!-- <Features3
     title="Our templates"
     subtitle="Etiam scelerisque, enim eget vestibulum luctus, nibh mauris blandit nulla, nec vestibulum risus justo ut enim. Praesent lacinia diam et ante imperdiet euismod."
     columns={3}
@@ -72,11 +92,11 @@ const metadata = {
         icon: 'tabler:template',
       },
     ]}
-  />
+  /> -->
 
   <!-- Features3 Widget ************** -->
 
-  <Features3
+  <!-- <Features3
     columns={3}
     isAfterContent={true}
     items={[
@@ -121,11 +141,11 @@ const metadata = {
       src: 'https://images.unsplash.com/photo-1504384308090-c894fdcc538d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80',
       alt: 'Colorful Image',
     }}
-  />
+  /> -->
 
   <!-- Steps2 Widget ****************** -->
 
-  <Steps2
+  <!-- <Steps2
     title="Our values"
     subtitle="Maecenas eu tellus eget est scelerisque lacinia et a diam. Aliquam velit lorem, vehicula id fermentum et, rhoncus et purus. Nulla facilisi. Vestibulum malesuada lacus."
     items={[
@@ -145,11 +165,11 @@ const metadata = {
           'Vestibulum imperdiet libero et lectus molestie, et maximus augue porta. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.',
       },
     ]}
-  />
+  /> -->
 
   <!-- Steps2 Widget ****************** -->
 
-  <Steps2
+  <!-- <Steps2
     title="Achievements"
     subtitle="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, quam nec venenatis lobortis, mi risus tempus nulla, sed porttitor est nibh at nulla."
     isReversed={true}
@@ -176,11 +196,11 @@ const metadata = {
         icon: 'tabler:award',
       },
     ]}
-  />
+  /> -->
 
   <!-- Features2 Widget ************** -->
 
-  <Features2
+  <!-- <Features2
     title="Our locations"
     tagline="Find us"
     columns={4}
@@ -202,11 +222,11 @@ const metadata = {
         description: '3456 Lorem Ipsum St, 34567, São Paulo',
       },
     ]}
-  />
+  /> -->
 
   <!-- Features2 Widget ************** -->
 
-  <Features2
+  <!-- <Features2
     title="Technical Support"
     tagline="Contact us"
     columns={2}
