--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Hero from '~/components/widgets/Hero2.astro';
 import Note from '~/components/widgets/Note.astro';
 import Features from '~/components/widgets/Features.astro';
 import Features2 from '~/components/widgets/Features2.astro';
+import BonserMember from '~/components/widgets/BonserMember.astro';
 import Steps from '~/components/widgets/Steps.astro';
 import Content from '~/components/widgets/Content.astro';
 import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
@@ -45,6 +46,89 @@ const metadata = {
       Dengan mengusung semangat
     </Fragment>
   </Hero>
+  <div class="container mx-auto">
+    <iframe class="mx-auto w-[100%] lg:w-[80%] h-[500px]" width="560" height="315" src="https://www.youtube.com/embed/ewRIVUpx6Q4?si=o1C2vzvXi8XS5nbz&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
+  <BonserMember
+    title="Keluarga Besar Kita"
+    subtitle="Kebersamaan yang Menguatkan, Cerita yang Menyatukan."
+    columns={4}
+    items={[
+      {
+        media: {
+          src: '~/assets/images/icons/icon1.jpeg',
+          alt: ''
+        }
+      },
+      {
+        media: {
+          src: '~/assets/images/icons/icon2.jpeg',
+          alt: ''
+        }
+      },
+      {
+        media: {
+          src: '~/assets/images/icons/icon3.jpeg',
+          alt: ''
+        }
+      },
+      {
+        media: {
+          src: '~/assets/images/icons/icon4.jpeg',
+          alt: ''
+        }
+      },
+      {
+        media: {
+          src: '~/assets/images/icons/icon5.jpeg',
+          alt: ''
+        }
+      },
+      {
+        media: {
+          src: '~/assets/images/icons/icon6.jpeg',
+          alt: ''
+        }
+      },
+      {
+        media: {
+          src: '~/assets/images/icons/icon7.jpeg',
+          alt: ''
+        }
+      },
+      {
+        media: {
+          src: '~/assets/images/icons/icon8.jpeg',
+          alt: ''
+        }
+      },
+      {
+        media: {
+          src: '~/assets/images/icons/icon9.jpeg',
+          alt: ''
+        }
+      },
+      {
+        media: {
+          src: '~/assets/images/icons/icon10.jpeg',
+          alt: ''
+        }
+      },
+      {
+        media: {
+          src: '~/assets/images/icons/icon11.jpeg',
+          alt: ''
+        }
+      },
+      {
+        media: {
+          src: '~/assets/images/icons/icon12.jpeg',
+          alt: ''
+        }
+      },
+    ]}
+  />
+  
 
   <!-- Note Widget ******************* -->
 
