update kontak kami

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -12,12 +12,12 @@ const metadata = {
 <Layout metadata={metadata}>
   <!-- HeroText Widget ******************* -->
 
-  <HeroText tagline="Contact" title="Let's Connect!" />
+  <HeroText tagline="Kontak" title="Kami Siap Mendengar Anda" />
 
   <ContactUs
     id="form"
-    title="Drop us a message today!"
-    subtitle="For quicker answers, explore our FAQs section. You may find the solution you're looking  for right there! If not, our support team is delighted to help you."
+    title="Ayo Terhubung"
+    subtitle="Dapatkan Informasi dan Dukung Kita Semua"
     inputs={[
       {
         type: 'text',
@@ -37,7 +37,7 @@ const metadata = {
       label:
         'By submitting this contact form, you acknowledge and agree to the collection of your personal information.',
     }}
-    description="Our support team typically responds within 24 business hours."
+    description=""
   />
 
   <!-- Features2 Widget ************** -->
@@ -61,17 +61,17 @@ const metadata = {
       // },
       {
         title: 'Phone',
-        description: '+1 (234) 567-890',
+        description: '+6289687700260',
         icon: 'tabler:headset',
       },
       {
         title: 'Email',
-        description: 'contact@support.com',
+        description: 'Rikibonserku@gmail.com',
         icon: 'tabler:mail',
       },
       {
         title: 'Location',
-        description: '1234 Lorem Ipsum St, 12345, Miami, EEUU',
+        description: 'Villa nusa indah 3, blok kh7 no 16. Kel bojongkulur, kec. Gmn putri, Bogor, Jabar. 16969',
         icon: 'tabler:map-pin',
       },
     ]}
